# apple-silicon-coder

./: README.md  pyproject.toml
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: api_server.py  apple_silicon_coder.py  model.py  model_optimizer.py
tests/: test_api.py  test_apple_silicon_coder.py  test_model.py  test_model_optimizer.py
